  TEZ-2721. rebase 08/14
  TEZ-2714. Fix comments from review - part 3.
  TEZ-2727. Fix findbugs warnings
  TEZ-2670. Remove TaskAttempt holder used within TezTaskCommunicator.
  TEZ-2735. rebase 08/21
  TEZ-2736. Pre-merge: Update CHANGES.txt and version in branch.


Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2663. SessionNotRunning exceptions are wrapped in a ServiceException from a dying AM.
  TEZ-2825. Report progress in terms of completed tasks to reduce load on AM for Tez UI
  TEZ-2812. Tez UI: Update task & attempt tables while in progress.
  TEZ-2786. Tez UI: Update vertex, task & attempt details page while in progress.
  TEZ-2817. Tez UI: update in progress counter data for the dag vertices and tasks table
  TEZ-2813. Tez UI: add counter data for rest api calls to AM Web Services v2
  TEZ-2660. Tez UI: need to show application page even if system metrics publish is disabled.
  TEZ-2787. Tez AM should have java.io.tmpdir=./tmp to be consistent with tasks
  TEZ-2780. Tez UI: Update All Tasks page while in progress
  TEZ-2792. Add AM web service API for tasks
  TEZ-2807. Log data in the finish event instead of the start event
  TEZ-2766. Tez UI: Add vertex in-progress info in DAG details
  TEZ-2768. Log a useful error message when the summary stream cannot be closed when shutting
  down an AM.
  TEZ-2745. ClassNotFoundException of user code should fail dag
  TEZ-2761. Tez UI: update the progress on the dag and vertices pages with info from AM
  TEZ-2731. Fix Tez GenericCounter performance bottleneck
  TEZ-2752. logUnsuccessful completion in Attempt should write original finish
  time to ATS
  TEZ-2755. Fix findbugs warning in TezClient
  TEZ-2767. Make TezMxBeanResourceCalculator the default resource calculator.
  TEZ-2602. Throwing EOFException when launching MR job
  TEZ-2575. Handle KeyValue pairs size which do not fit in a single block in PipelinedSorter
  TEZ-2198. Fix sorter spill counts